updated github actions and package.json

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,6 +21,8 @@ jobs:
         run: pnpm install --frozen-lockfile
       - name: "Run tests"
         run: pnpm test
+      - name: "Build"
+        run: pnpm build
       - name: "Publish to npm"
         run: pnpm publish --no-git-checks
         env:
