--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "bench": "vitest bench"
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^1.4.0",
